# Teu-Im

./: .gitignore  .vercelignore  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  README.md  SYSTEM.md  docker-compose.yml  guide.md  lighthouserc.js  package.json  pnpm-lock.yaml  tsconfig.base.json  vercel.json
.github/: dependabot.yml
.github/workflows/: ci.yml  desktop-release.yml  lighthouse.yml
.husky/: pre-commit
.omc/: ultrawork-state.json
.omc/notepads/audience-loading-fix/: decisions.md  learnings.md
.omc/notepads/desktop-auth-persistence/: learnings.md
.omc/notepads/task-90/: performance-optimizations.md
apps/desktop/: .env.example  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/.omc/: ultrawork-state.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.omc/: ultrawork-state.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: audio.rs  lib.rs  main.rs
apps/mobile/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/: .env.example  .env.test  .gitignore  CLAUDE.md  Dockerfile  README.md  SECURITY_IMPROVEMENTS.md  middleware.ts  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
docs/: API.md  DATABASE.md  DEPLOYMENT.md
supabase/: RLS_DOCUMENTATION.md  seed.sql
supabase/migrations/: 001_initial_schema.sql  002_storage_session_audio.sql  003_organizations_teams.sql  004_audio_chunks.sql
(+134 files in other folders)
