[package]
name = "teu-im-desktop"
version = "0.1.0"
authors = ["Teu-Im Team"]
edition = "2021"

[lib]
name = "teu_im_desktop_lib"
path = "src/lib.rs"

[[bin]]
name = "teu-im-desktop"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [
  "devtools",
] }
tauri-build = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.5"
cpal = "0.15"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
